Fix word wrapping (or lack of)

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,7 @@ div.result-filename {
     padding-bottom: 5px;
     margin-bottom: 5px;
     border-bottom: 1px solid #555555;
+    word-break: break-word;
 }
 
 div.result-content {
